Application settings: SBT launcher, JVM options