@@ -24,8 +24,6 @@ object Sbt {
 
   val UnmanagedLibraryName = "sbt-unmanaged-jars"
 
-  val VmOptions = Seq("-Xmx768M", "-XX:MaxPermSize=384M")
-
   lazy val Icon = IconLoader.getIcon("/sbt.png")
 
   lazy val FileIcon = IconLoader.getIcon("/sbt-file.png")
